Fix error - cards overlapping extender

--- a/style.css
+++ b/style.css
@@ -752,7 +752,7 @@ li {
 
 .cards-items.selected {
     transform: scale(1.3);
-    z-index: 999;
+    z-index: 2;
     overflow: visible;
     transition: transform 0.25s ease;
 }
